...
        android:padding="12dp"
        android:textColor="@color/on_bg"
        android:textSize="15sp"
        android:textStyle="bold" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
...
